--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
      <header>
 
         <nav class="navbar">
-            <img src="./Aseet/DSC_0472.JPG" alt="Manderina " class="Profile-pic" width="20px"> 
             <ul class="nav-list">
                 <li class="nav-item"><a href="#About me" class="nav-link">About me</a></li> 
                 <li class="nav-item"><a href="#My Hobbies" class="nav-link">My Hobbies</a></li>
@@ -21,14 +20,14 @@
             </ul>
              <button class="hire-button"><a href="#hire">Hire Me</a></button>
         </nav>
+        <img src="./Aseet/DSC_0472.JPG" alt="Manderina " class="Profile-pic"> 
         <h1>Manderina Georgette </h1>
         
-
      </header>
      <!-- Bio section -->
       <section>
         <h2>About me</h2>
-        <p>This is a short bio about Rina, she enjoy doing reaserch, learning how code and taking picture of nature</p>
+        <p>This is a short bio about Rina, she enjoy doing reaserch, learning how to code and taking picture of nature</p>
 
       </section>
       <!-- Hobbie section -->
@@ -46,6 +45,7 @@
         <section>
             <h2>Contact me</h2>
             <form action="">
+
                 <label for="name">Name:</label>
                 <input type="text" id="name" name="name">
                 <label for="email">Email:</label>
@@ -57,4 +57,5 @@
             </form>
         </section>
 </body>
+<footer class="footer"> 2024@ Rina</footer>
 </html>
